# windows-mic-manager

./: .cursorrules  .gitignore  AGENT.md  AGENTS.md  BUILD-WINUI3.md  CLAUDE.md  CONTRIBUTING.md  MicrophoneManager.sln  README.md  global.json
.github/: copilot-instructions.md
MicrophoneManager/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  MicrophoneManager.csproj  app.manifest
MicrophoneManager.Core/: MicrophoneManager.Core.csproj
MicrophoneManager.Core/Models/: MicrophoneDevice.cs
MicrophoneManager.Core/Services/: AudioDeviceService.cs  IAudioDeviceService.cs  ObsMeterMath.cs  PolicyConfigService.cs  StartupService.cs
MicrophoneManager.Core/ViewModels/: MicrophoneEntryViewModel.cs  MicrophoneListViewModel.cs  TrayViewModel.cs
MicrophoneManager.Tests/: MicrophoneEntryViewModelTests.cs  MicrophoneListViewModelTests.cs  MicrophoneManager.Tests.csproj  StartupServiceTests.cs  TrayViewModelTests.cs
MicrophoneManager.Tests/Fakes/: FakeAudioDeviceService.cs
MicrophoneManager.WinUI/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  MicrophoneManager.WinUI.csproj  Program.cs  RelayCommand.cs  app.manifest
MicrophoneManager.WinUI/Assets/: ATTRIBUTION.txt
MicrophoneManager.WinUI/Converters/: BoolToButtonBrushConverter.cs  BoolToVisibilityConverter.cs  DbFormatConverter.cs  DbToMeterBrushConverter.cs  MuteStateToIconConverter.cs  MuteStateToLabelConverter.cs  PercentFormatConverter.cs  PercentToWidthConverter.cs
MicrophoneManager.WinUI/Models/: MicrophoneDevice.cs
MicrophoneManager.WinUI/Services/: AudioDeviceService.cs  ComThreadService.cs  IAudioDeviceService.cs  IconGenerator.cs  ObsMeterMath.cs  PolicyConfigService.cs  StartupService.cs
MicrophoneManager.WinUI/ViewModels/: MicrophoneEntryViewModel.cs  MicrophoneListViewModel.cs  TrayViewModel.cs
MicrophoneManager.WinUI/Views/: FlyoutWindow.xaml  FlyoutWindow.xaml.cs  MicrophoneFlyout.xaml  MicrophoneFlyout.xaml.cs  MicrophoneWindow.xaml  MicrophoneWindow.xaml.cs
MicrophoneManager/Converters/: BoolToVisibilityConverter.cs  MuteStateToIconConverter.cs  MuteStateToLabelConverter.cs  PercentToWidthConverter.cs
MicrophoneManager/Interop/: MicEngine.cs  MicEngineNative.cs  MicEngineSafeHandle.cs  (+1 more)
docs/: RUST_WPF_INTEGRATION.md  winui3-architecture.md  winui3-migration-plan.md  winui3-migration-recon.md  winui3-system-tray-guide.md  wpf-to-winui-mapping.md
mic-engine-ffi/: Cargo.toml
mic-engine-ffi/src/: lib.rs
mic-manager-rs/: Cargo.toml  build.rs  build_vs.bat  build_vs.ps1
mic-manager-rs/resources/: app.manifest  app.rc
mic-manager-rs/src/: app.rs  lib.rs  main.rs  tray.rs
mic-manager-rs/src/audio/: capture.rs  device.rs  devices.rs  enumerator.rs  mod.rs  notifications.rs  policy.rs  volume.rs
mic-manager-rs/src/platform/: icons.rs  mod.rs  registry.rs
mic-manager-rs/src/ui/: flyout.rs  menu.rs  mod.rs  theme.rs  tray.rs
mic-manager-rs/src/ui/components/: device_row.rs  level_meter.rs  mod.rs  volume_slider.rs
openspec/: project.md
scripts/: build-all.ps1  build-rust-ffi.ps1  publish-folder-to-utils.ps1  publish-singlefile-to-utils.ps1
specs/: spec.md
(+38 files in other folders)
