[package]
name = "mic-engine-ffi"
version = "0.1.0"
edition = "2021"
authors = ["Windows Microphone Manager"]
description = "FFI bindings for Windows microphone management - C ABI for .NET interop"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Reuse audio logic from mic-manager-rs
mic-manager-rs = { path = "../mic-manager-rs" }

# Serialization for JSON data exchange
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Windows APIs (for COM initialization)
windows = { version = "0.58", features = [
    "Win32_System_Com",
    "Win32_Foundation",
]}

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
lto = true
codegen-units = 1
strip = false  # Keep symbols for debugging interop issues
