[package]
name = "mic-manager-rs"
version = "0.1.0"
edition = "2021"
authors = ["Windows Microphone Manager"]
description = "Windows microphone manager system tray utility"

[dependencies]
# UI Framework - use glow backend only (no wgpu/DirectX dependency)
eframe = { version = "0.29", default-features = false, features = ["glow", "default_fonts"] }

# System Tray
tray-icon = "0.17"

# Windows APIs
windows = { version = "0.58", features = [
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_Foundation",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Dwm",
    "Win32_Devices_Properties",
    "Win32_System_Registry",
    "Win32_Security",
    "implement",
]}
windows-core = "0.58"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Image handling for icons
image = { version = "0.25", default-features = false, features = ["png"] }

[build-dependencies]
# For embedding Windows manifest and resources
embed-resource = "2.4"

[profile.release]
lto = true
codegen-units = 1
strip = true

# Prevent console window from appearing in release builds
[[bin]]
name = "mic-manager-rs"
path = "src/main.rs"

[package.metadata.windows]
subsystem = "windows"
